# Browser host surface for serval's scripted tier (plan Layer 1). Built ON the
# script-engine-api VM primitives (set_global / set_function / host data), generic
# over the backend — no engine dependency in the non-dev graph. The "browser-ish"
# concepts (global scope, console, event loop, EventTarget, document) live here, not
# in script-engine-api. The DOM surface binds serval-scripted-dom (a LayoutDomMut
# arena) — a DOM dep, still no engine dep.
# See docs/2026-05-26_pluggable_engines_testharness_plan.md.
[package]
name = "script-runtime-api"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
name = "script_runtime_api"
path = "lib.rs"

[dependencies]
script-engine-api = { path = "../script-engine-api" }
# The DOM the host surface scripts against: a NodeId arena implementing
# LayoutDom + LayoutDomMut, recording DomMutations for serval-layout.
serval-scripted-dom = { path = "../serval-scripted-dom" }
# QualName / Namespace / LocalName for create_element.
layout-dom-api = { path = "../shared/layout-dom" }
# Prefix (not re-exported by layout-dom-api) for createElementNS qualified names.
markup5ever = { workspace = true }
# WHATWG URL resolution for the document base URL + relative `fetch()` / `Request`
# URLs (server-mode WPT runs). No network stack enters this crate; only the parser.
url = { workspace = true }

[dev-dependencies]
# Validate the host surface against a real backend. Boa is pure Rust (all targets);
# Nova is native-only.
script-engine-boa = { path = "../script-engine-boa" }
# Parse HTML to a LayoutDom for the `load_dom` test (a real source document).
serval-static-dom = { path = "../serval-static-dom" }
# Backs the test-side WebGlHandler that proves the JS WebGLRenderingContext
# surface reaches a real wgpu-backed context end-to-end.
webgl_wgpu = { workspace = true }
wgpu = { workspace = true }
pollster = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
script-engine-nova = { path = "../script-engine-nova" }
