[package]
name = "serval-layout"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Profile-neutral layout engine for serval; consumes any LayoutDom-shaped DOM and emits ServalPaintList."

[lib]
path = "lib.rs"

[dependencies]
app_units = { workspace = true }
atomic_refcell = { workspace = true }
data-url = { workspace = true }
euclid = { workspace = true }
html5ever = { workspace = true }
image = { workspace = true }
layout_api = { workspace = true }
layout_dom_api = { workspace = true }
markup5ever = { workspace = true }
malloc_size_of = { workspace = true }
malloc_size_of_derive = { workspace = true }
engine_observables_api = { workspace = true }
url = { workspace = true }
paint_list_api = { workspace = true }
paint_types = { workspace = true }
parley = { workspace = true }
pixels = { workspace = true }
serde = { workspace = true }
rustc-hash = { workspace = true }
selectors = { workspace = true }
servo_arc = { workspace = true }
servo-base = { workspace = true }
servo-url = { workspace = true }
stylo = { workspace = true }
stylo_atoms = { workspace = true }
stylo_dom = { workspace = true }
stylo_traits = { workspace = true }
taffy = { workspace = true, features = ["taffy_tree", "block_layout", "flexbox"] }

[dev-dependencies]
base64 = { workspace = true }
serde_json = { workspace = true }
serval-static-dom = { path = "../serval-static-dom" }
